k8s/apresentacao_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apresentacao
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apresentacao
  template:
    metadata:
      labels:
        app: apresentacao
    spec:
      containers:
      - name: apresentacao
        image: registrympn.azurecr.io/apresentacao2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred
      terminationGracePeriodSeconds: 10
      restartPolicy: Always
