k8s/apresentacao_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apresentacao-svc
spec:
  type: LoadBalancer
  selector:
    app: apresentacao
  ports:
  - port: 8080
    protocol: "TCP"
    targetPort: "8080"
